corrected the alignment  of div

--- a/bestplaces.css
+++ b/bestplaces.css
@@ -4,7 +4,7 @@
     height: 700px; ;
     width: 500px;
     display: inline-block;
-   
+   vertical-align: top;
 }
 div img{
 height: 450px;
